# kinect-for-ubuntu

./: CMakeLists.txt  README.md  test.cpp
include/: kinect.h
